--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.light-blue-backdrop {
+  background-color: #5cb3fd;
+}
